// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrimaryButton /> should render button 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  color: currentColor;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  outline: none;
  padding: 0;
  margin: 0;
  border-radius: 0.2rem;
  font-size: var(--font-size-smaller);
  line-height: 1.3333333;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary-normal);
  color: white;
}

.c1 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c1 + .c0 {
  margin: 0 0 0 0.8rem;
}

.c1:hover {
  background: var(--primary-lighter);
}

<div>
  <button
    class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 c0 c1"
  >
    Button
  </button>
</div>
`;

exports[`<PrimaryButton /> should render loader 1`] = `
.c3 {
  margin: 2rem 0;
  -webkit-animation: jBcSpD 800ms ease-in-out infinite alternate;
  animation: jBcSpD 800ms ease-in-out infinite alternate;
}

.c3:after {
  background: var(--primary-normal);
  border-radius: 50%;
  content: '';
  display: block;
  height: 1rem;
  width: 1rem;
  margin: 0 auto;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  color: currentColor;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  outline: none;
  padding: 0;
  margin: 0;
  border-radius: 0.2rem;
  font-size: var(--font-size-smaller);
  line-height: 1.3333333;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary-normal);
  color: white;
  padding: 1.9rem 1.6rem;
  cursor: default;
}

.c1 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c1 + .c0 {
  margin: 0 0 0 0.8rem;
}

.c1:hover {
  background: var(--primary-lighter);
}

.c1 .c2 {
  margin: 0;
}

.c1 .c2:after {
  background: #fff;
}

<div>
  <button
    class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 Buttonsstyles__PrimaryButton-jpizpn-2 c0 c1"
  >
    <span
      class="c2 c3"
    />
  </button>
</div>
`;
